--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
 
     <div class="container">
       <div class="container__left">
-        <div class="score_box"></div>
-        <div class="menu_avatar"></div>
-        <div class="card_details"></div>
+        <div class="score_box">
+          <span id="scoe_points">wind: 0 | Lose: 0</span>
+        </div>
+        <div class="menu_avatar">
+          <img id="card-image">
+        </div>
+        <div class="card_details">
+          <p id="card-name"></p>
+          <p id="card-type"></p>
+        </div>
       </div>
       <div class="container__right">
         <div class="card-box__container"></div>
