adjusting mouseover :sparkles:

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
 
         <div class="card_details frame">
-          <p id="card-name">a</p>
-          <p id="card-type">a</p>
+          <p id="card-name">Selecione</p>
+          <p id="card-type">uma carta</p>
         </div>
       </div>
       <!--lado direito  -->
@@ -43,13 +43,15 @@
               <div class="card-infield">
                 <img id="player-field-card" height="180px" width="125px" />
               </div>
-              <img height="100px" src="./src/assets/icons/millenium2.png" />
+              <img height="75px" src="./src/assets/icons/millenium2.png" />
               <div class="card-infield">
                 <img id="computer-field-card" height="180px" width="125px" />
               </div>
             </div>
             <div class="versus-bottom">
-              <button id="next-duel" class="rpgui-button" onclick="resetDuel()">GANHOU</button>
+              <button id="next-duel" class="rpgui-button" onclick="resetDuel()">
+                GANHOU
+              </button>
             </div>
           </div>
           <div class="card-box framed" id="player-cards"></div>
