refactoring screen versus :sparkles:

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       <div class="container__right">
         <div class="card-box__container">
           <div class="card-box framed" id="computer-cards"></div>
-          <div class="card-versus__container">
-            <div class="versus-top">
+          <div class="card-versus__container ">
+            <div class="versus-top debug">
               <div class="card-infield">
-                <img id="player-field-card" height="180px" width="125px" />
+                <img id="player-field-card" />
               </div>
               <img height="75px" src="./src/assets/icons/millenium2.png" />
               <div class="card-infield">
-                <img id="computer-field-card" height="180px" width="125px" />
+                <img id="computer-field-card"  />
               </div>
             </div>
             <div class="versus-bottom">
