--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yu-Gi-Oh Jo-ken-po Edition</title>
     <link rel="stylesheet" href="./src/styles/style.css" />
+    <!-- favicon -->
     <link
       rel="shortcut icon"
       href="./src/assets/favicon/Favicon.ico"
