--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     />
   </head>
   <body>
+    <audio id="bgm" loop>
+      <source src="./src/assets/audios/egyptian_duel.mp3" type="audio/mp3">
+    </audio>
     <div class="bg-video">
       <video class="video" autoplay loop muted>
         <source src="./src/assets/video/yugi.mp4" type="video/mp4" />
@@ -39,14 +42,14 @@
       <div class="container__right">
         <div class="card-box__container">
           <div class="card-box framed" id="computer-cards"></div>
-          <div class="card-versus__container ">
+          <div class="card-versus__container">
             <div class="versus-top debug">
               <div class="card-infield">
                 <img id="player-field-card" />
               </div>
               <img height="75px" src="./src/assets/icons/millenium2.png" />
               <div class="card-infield">
-                <img id="computer-field-card"  />
+                <img id="computer-field-card" />
               </div>
             </div>
             <div class="versus-bottom">
