--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- lado esquerdo -->
       <div class="container__left framed-golden-2">
         <div class="score_box frame">
-          <span id="score_points">Wind: 0 | Lose: 0</span>
+          <span id="score_points">Win: 0 | Lose: 0</span>
         </div>
 
         <div class="menu_avatar">
